--- a/scss/layout/_flexboxgrid.scss
+++ b/scss/layout/_flexboxgrid.scss
@@ -36,7 +36,7 @@ $half-columns-spacing: $columns-spacing * .5;
         margin-right: 0;
         margin-left: 0;
 
-        > [class*='col-'] {
+        > [class*='.#{$col-prefix}-'] {
             padding-left: 0;
             padding-right: 0;
         }
