Removed typography partial until lear assets and URL management with webpack. SCSS compiling works

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,7 +5,7 @@
 @import './abstracts/mixins';
 // Base
 @import './base/reset';
-@import './base/typography';
+// @import './base/typography'; // ! Ommited until assets management addressed with webpack
 @import './base/helpers';
 // Components
 // Layout
