--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -2,42 +2,42 @@ $rhythm-unit: $base-font-size * $base-line-height;
 
 @font-face {
   font-family: 'SourceSans Pro';
-  src: url("../fonts/sourcesanspro/SourceSansPro-Light.ttf");
+  src: url("../../assets/fonts/sourcesanspro/SourceSansPro-Light.ttf");
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'SourceSans Pro';
-  src: url("../fonts/sourcesanspro/SourceSansPro-LightItalic.ttf");
+  src: url("../../assets/fonts/sourcesanspro/SourceSansPro-LightItalic.ttf");
   font-weight: 300;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'SourceSans Pro';
-  src: url("../fonts/sourcesanspro/SourceSansPro-Regular.ttf");
+  src: url("../../assets/fonts/sourcesanspro/SourceSansPro-Regular.ttf");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'SourceSans Pro';
-  src: url("../fonts/sourcesanspro/SourceSansPro-Italic.ttf");
+  src: url("../../assets/fonts/sourcesanspro/SourceSansPro-Italic.ttf");
   font-weight: 400;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'SourceSans Pro';
-  src: url("../fonts/sourcesanspro/SourceSansPro-Bold.ttf");
+  src: url("../../assets/fonts/sourcesanspro/SourceSansPro-Bold.ttf");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'SourceSans Pro';
-  src: url("../fonts/sourcesanspro/SourceSansPro-BoldItalic.ttf");
+  src: url("../../assets/fonts/sourcesanspro/SourceSansPro-BoldItalic.ttf");
   font-weight: 700;
   font-style: italic;
 }
