--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,7 +5,7 @@
 @import './abstracts/mixins';
 // Base
 @import './base/reset';
-// @import './base/typography'; // ! Ommited until assets management addressed with webpack
+@import './base/typography';
 @import './base/helpers';
 // Components
 // Layout
